# tamago

./: Cargo.toml  README.md  activate.sh
src/: build_python.rs  env_picker.rs  main copy.rs  main.rs  proxy.rs
